--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@
     padding: 0;
 }
 
+ol, ul {
+    padding-left: 0;
+    margin-bottom: 0;
+}
+
 body {
     text-align: center;
     background-color: cornsilk;
